# warny-bi

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: .env.example  powerbi.secrets.example.json
config/prompts/: evidence_block.txt  query_intent_foss.txt  rag_answer.txt  rag_answer_azure.txt  rag_answer_foss.txt
data/processed/: dataset_sources.csv  maintenance_service_map.csv  recall_data.csv  scenario_validation.csv  schema.json  vw_rag_documents.csv  warning_light_catalog.csv  warning_light_catalog_old.csv  warning_light_image_catalog.csv
data/raw/: dataset_sources.csv  maintenance_service_map.csv  recall_data.csv  scenario_validation.csv  warning_light_catalog.csv  warning_light_catalog_corrected.csv  warning_light_catalog_corrected.xlsx  warning_light_catalog_old.csv  warning_light_image_catalog.csv
docs/: azure_setup.md  data_inventory.md  foss_setup.md  logic_app_setup.md  pipeline_architecture.md  project_scope.md  rag_document_contract.md
powerbi_dashboards/: warny-bi-azure.pbix  warny-bi-foss.pbix
scripts/bash/: run_local.sh  run_local_foss_api.sh
scripts/powerbi/: answer_query.m  foss_query.m  load_config.m  log_query.m  response_query.m
scripts/python/: build_canonical_vocab.py  load_to_db.py  load_to_opensearch.py  load_to_qdrant.py  preprocess_dataset.py  run_rag_api.py
scripts/sql/: 01_create_tables.sql  03_create_rag_view.sql  04_verify.sql  05_create_query_log.sql  Script.sql
src/azure_bridge/: .funcignore  README.md  function_app.py  local.settings.json.example  requirements.txt
src/powerbi/: answer_function.m  (+13 more)
(+38 files in other folders)
