[project]
name = "warny-bi"
version = "0.1.0"
description = "WARNY-BI vehicle warning-light RAG backend and utilities"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warnybi"]
